# hypermodern-python

./: .README.rst.swp  .gitignore  .pyproject.toml.swp  README.rst  noxfile.py  pyproject.toml
src/hypermodern_python/: console.py  wikipedia.py
tests/: .test_console.py.swp  test_console.py  test_wikipedia.py
