[tool.poetry]
name = "rko-hypermodern-python2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
 { include = "hypermodern_python", from="src" },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.23.0"
pytest-cov = {version = "^2.9.0", extras = ["toml"]}

[tool.poetry.dev-dependencies]
pytest = "^4.6"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
